Fixed footer overflow

--- a/public/site/templates/styles/main.css
+++ b/public/site/templates/styles/main.css
@@ -1077,6 +1077,10 @@ html{
 			--tw-bg-opacity: 1;
 			background-color: rgb(39 53 131 / var(--tw-bg-opacity));
 }
+.bg-red-500{
+			--tw-bg-opacity: 1;
+			background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .stroke-current{
 			stroke: currentColor;
 }
